<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lcom67.productdemoapp.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/backimage">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar">
        </include>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_registerUser"
                android:text="Product App"
                android:gravity="center"
                android:layout_marginTop="@dimen/value_lr_16dp"
                android:textSize="@dimen/value_24dp"
                android:textStyle="bold|italic"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/value_8dp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:gravity="center"
                android:layout_marginTop="@dimen/value_lr_16dp"
                android:layout_marginLeft="@dimen/value_16dp"
                android:layout_marginBottom="@dimen/value_8dp"/>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameWrapper"
            android:layout_marginTop="@dimen/value_16dp"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_login_userName"
                android:hint="@string/username"
                style="@style/EdittextMargin"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/value_16dp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordWrapper"
            android:layout_marginTop="@dimen/value_16dp"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_login_password"
                android:hint="@string/password"
                style="@style/EdittextMargin"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="@dimen/value_16dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/value_16dp"
            android:id="@+id/tv_forgotPassword"
            android:text="@string/forgot_password"
            android:textSize="@dimen/value_16sp"
            android:gravity="right"
            android:layout_marginTop="@dimen/value_8dp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_marginTop="@dimen/value_16dp"
            style="@style/ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:text="@string/signup"
            android:layout_marginTop="@dimen/value_16dp"
            style="@style/ButtonStyle"
            android:background="@drawable/button_bg"/>
    </LinearLayout>

</LinearLayout>
