<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/value_5dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:elevation="@dimen/value_8dp"
        android:layout_marginTop="@dimen/value_5dp"
        android:layout_marginBottom="@dimen/value_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/value_16dp"
                android:layout_marginTop="@dimen/value_8dp"
                android:layout_marginBottom="@dimen/value_8dp">
                <com.example.lcom67.productdemoapp.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/list_product_image"
                    android:src="@drawable/default_product" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/value_16dp"
                android:gravity="center"
                android:layout_marginTop="@dimen/value_8dp"
                android:layout_marginBottom="@dimen/value_8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_pproduct_name"
                    android:hint="@string/productname"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/value_16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_product_price"
                    android:hint="@string/productprice"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/value_16dp"
                    android:layout_marginTop="@dimen/value_8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_product_description"
                    android:hint="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/value_16dp"
                    android:layout_marginTop="@dimen/value_8dp"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>=
</LinearLayout>